fixed buttons on safari and position of notification in mobile ver

--- a/styles/cookiestyle.css
+++ b/styles/cookiestyle.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Noto Sans', sans-serif;
+    color: #000;
     background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/congruent_pentagon.png');
     position: relative;
     /*Thanks to subtle patterns
