--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Noto Sans', sans-serif;
+    color: #000;
     background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/congruent_pentagon.png');
     /*Thanks to subtle patterns
     https://www.toptal.com/designers/subtlepatterns/congruent-pentagon/*/
